plugins {
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
    //id 'org.hibernate.orm' version '6.1.5.Final'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.90.Final:osx-aarch_64'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.90.Final:osx-aarch_64'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
    //implementation 'org.hibernate.validator:hibernate-validator:6.0.19.Final'
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'no.fintlabs:fint-kafka:3.0.0-rc-1'
    implementation 'no.fintlabs:fint-antlr:1.1.1'
    implementation 'no.fintlabs:fint-resource-server-security:1.1.0'
    implementation 'no.fintlabs:fint-kontroll-auth:1.2.4'
    implementation 'no.fint:fint-model-resource:0.4.1'
    //implementation 'io.springfox:springfox-boot-starter:3.0.0'
    //implementation 'io.springfox:springfox-swagger-ui:3.0.0'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    //annotationProcessor 'org.hibernate.orm:hibernate-jpamodelgen:6.1.5.Final'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    testImplementation 'com.h2database:h2'
    implementation platform('org.testcontainers:testcontainers-bom:1.19.0')
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'
}

test {
    useJUnitPlatform()
}
